# Study

./: .gitignore
CMake/SimpleGame/: CMakeLists.txt  GenerateProjectFiles.bat
CMake/SimpleGame/test/: CMakeLists.txt
CMake/SimpleGame/test/src/: main.cpp
CMake/SimpleGame/test/src/Base/: Delegate.hpp  Event.hpp  EventBroadcaster.hpp  GameBase.cpp  GameBase.hpp  Layer.cpp  Layer.hpp  Renderer.cpp  Renderer.hpp  Type.hpp
CMake/SimpleGame/test/src/Component/: Animation.hpp  Player.hpp  PlayerInput.cpp  PlayerInput.hpp  Transform.hpp
CMake/SimpleGame/test/src/Resource/: Helper.hpp  Resource.hpp
CMake/SimpleGame/test/src/System/: PlayerInputSystem.hpp  System.hpp
CMake/Tutorial/: CMakeLists.txt  foo.cpp  generate.bat
CMake/Tutorial/Batch/: WindowsProjectBuild.bat  WindowsProjectGen.bat
CMake/Tutorial/Script/: LinuxProjectBuild.sh  LinuxProjectGenDebug.sh  LinuxProjectGenRelease.sh  WindowsProjectBuild.bat  WindowsProjectGen.bat
CMake/Tutorial/src/: CMakeLists.txt  Dockerfile
CMake/Tutorial/src/breakpad-test/: CMakeLists.txt  main.cpp  private_environment.hpp
CMake/Tutorial/src/executable-example/: CMakeLists.txt  main.cpp
CMake/Tutorial/src/modern-cpp/: CMakeLists.txt  main.cpp
CMake/Tutorial/src/shared-library-example/: CMakeLists.txt  share.cpp
CMake/Tutorial/src/shared-library-example/include/: share.hpp
CMake/Tutorial/src/static-library-example/: CMakeLists.txt  static.cpp
CMake/Tutorial/src/static-library-example/include/: static.hpp
Dotnet/DotnetSolution/: DotnetSolution.sln
Dotnet/DotnetSolution/CrashReportingWeb/: CrashReportingWeb.csproj  Dockerfile  Program.cs
Dotnet/DotnetSolution/CrashReportingWeb/Controllers/: CrashReportingController.cs
Dotnet/DotnetSolution/CrashReportingWeb/Properties/: launchSettings.json
